--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="styles/output.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="./media/logo.svg" type="image/x-icon" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Youtube Video Converter</title>
   </head>
   <body>
